<resources>
    <string name="app_name">Planet</string>
    <string name="email_author">bimaa289@gmail.com</string>
    <string name="name_author">Bima Ardianto</string>
    <string name="about">About</string>
    <string name="about_menu">About</string>
    <string name="share_menu">share</string>
    <string name="judul_planet">Nama Planet Detail</string>
    <string name="radius_detail">Radius Detail</string>
    <string name="deskripsi_planet">Deskripsi Planet Detail</string>
    <string name="nama_planet">Nama Planet</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="description">Description</string>
    <string name="planet_name">Planet Name</string>
    <string name="planet_type">Planet Type</string>
    <string name="radius">Radius</string>
    <string name="average_temperature">Average Temperature</string>
    <string name="temperature_detail">Temperature Detail</string>
    <string name="gravity">Gravity</string>
    <string name="gravity_detail">Gravity detail</string>
    <string-array name="planetName">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Proxim Centauri B</item>
        <item>HD 189733 b</item>
    </string-array>
    <string-array name="planetType">
        <item>Terrestrial</item>
        <item>Terrestrial</item>
        <item>Terrestrial</item>
        <item>Terrestrial</item>
        <item>Gas giants</item>
        <item>Gas giants</item>
        <item>Gas giants</item>
        <item>Gas giants</item>
        <item>Super Earth</item>
        <item>Gas giants</item>
    </string-array>
</resources>